working on updating content

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -83,14 +83,16 @@
             <div class="col-md-2"></div>
             <div class="col-md-8 program-box">
                 <p class="program-title">Intro to Coding, Python</p>
-                <p class="program-subheading">Spring 2022</p>
-                <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
+                <p class="program-subheading">Spring 2023</p>
+                <p class="program-subheading">Led by DTech, In partnership with Edgewood College</p>
                 <p class="program-description">
-                    <b>Who:</b> Journey House community ONLY, 7th-8th graders, identify as a girl, no programming experience required<br>
-                    <b>When:</b> May 28-29, 9am-3pm<br>
-                    <b>Where:</b> Journey House, Milwaukee<br>
-                    <b>What:</b> In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
-                    Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
+                    <b>Who:</b> Badgerland Girl Scout Juniors, no programming experience required<br>
+                    <b>When:</b> Saturday-Sunday, 9am-4pm, April (Date TBD)<br>
+                    <b>Where:</b> Edgewood College, Madison<br>
+                    <b>What:</b> In this two day bootcamp, students will learn the basic concepts of programming in Python.
+                    No experience is required. Students will earn the “Junior Think Like A Programmer Award Badge.”
+                    Lunch, swag, and mini-prizes will be provided!<br>
+                    A program fee of $15 is required to attend (scholarships available if needed).<br>
                 </p>
                 <a href="https://forms.gle/q7dMoEnRUhaihP4v5" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
@@ -112,49 +114,50 @@
             <div class="col-md-2"></div>
             <div class="col-md-8 program-box">
                 <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Summer 2022</p>
+                <p class="program-subheading">Spring 2023</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
                     <b>Who:</b> Incoming 7th-9th graders, identify as a girl, no programming experience required<br>
                     <b>When:</b> June 27-30, 4:30pm-6:30pm<br>
                     <b>Where:</b> Milwaukee School of Engineering<br>
-                    <b>What:</b> In this 4-day program, students will learn the basics of web development. They will learn how to code in HTML, CSS, and JavaScript. The students will work on a mini-project to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
-                    Snacks, t-shirts, and mini-prizes will be provided!<br>
-                    A program fee of $15 is required to register.<br>
+                    <b>What:</b> In this 8-week virtual program, participants will learn the skills necessary to create a simple website, 
+                    which includes the basics of HMTL, CSS, and JavaScript. Their final projects will showcase one of their hobbies or interests. 
+                    Participants will learn about coding and tech jobs in the real world through a guest speaker. Swag and mini-prizes will be provided!<br>
+                    A program fee of $20 is required to attend (scholarships available if needed).<br>
                 </p>
                 <a href="https://forms.gle/8MA8z2kTyXwdPsZbA" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
-        <div class="row">
+        <!-- Place holder -->
+        <!-- <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-dropdown" id="program3">
                 <div class="row">
                     <div class="col-md-11">
-                        <p class="dropdown-title">Robocode Programming</p>
+                        <p class="dropdown-title">PROGRAM NAME</p>
                     </div>
                     <div class="col-md-1">
                         <img src="../images/downArrowWhite.png" id="arrow3">
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row" id="program3-info">
+        </div> -->
+        <!-- <div class="row" id="program3-info">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-box">
-                <p class="program-title">Robocode Programming</p>
-                <p class="program-subheading">Summer 2022</p>
-                <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
+                <p class="program-title">PROGRAM NAME</p>
+                <p class="program-subheading">SEASON YEAR</p>
+                <p class="program-subheading">Led by DTech, In partnership with PARTNER</p>
                 <p class="program-description">
-                    <b>Who:</b> Incoming 7th-8th graders, identify as a girl, no programming experience required<br>
-                    <b>When:</b> July 12-14, 1pm-5pm<br>
-                    <b>Where:</b> Milwaukee School of Engineering<br>
-                    <b>What:</b> In this 3-day program, students will learn to program in Java using the robocode library. By the end of the program, they will be able to program a virtual robot for a competition.<br>
-                    Snacks, t-shirts, and mini-prizes will be provided!<br>
-                    A program fee of $15 is required to register.<br>
+                    <b>Who:</b> TARGET GROUP<br>
+                    <b>When:</b> DATES AND TIMES<br>
+                    <b>Where:</b> LOCATION<br>
+                    <b>What:</b> PROGRAM DESCRIPTION<br>
+                    PROGRAM FEE<br>
                 </p>
-                <a href="https://forms.gle/NdWxYF8t6t9euCmX7" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
+                <a href="#" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
-        </div>
+        </div> -->
 
         <!-- Contact Us -->
         <div class="row break-pt"></div>
