--- a/index.html
+++ b/index.html
@@ -105,29 +105,33 @@
                     <p class="box-paragraph">
                         Check out our upcoming programs!
                     </p>
-                    <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See All Upcoming Programs</a>
+                    <a href="pages/upcomingPrograms.html" role="button" class="btn btn-dark" id="link-btn">See All Upcoming Programs</a>
                     <div class="row">
-                        <!-- <div class="col-md-1"></div> -->
-                        <div class="col-md-3 upcoming-box">
-                            <p class="program-title">Introduction to Python</p>
-                            <p class="program-date">May 1</p>
+                        <div class="col-md-3">
+                            <a href="pages/upcomingPrograms.html#program1" role="button" class="btn" id="upcoming-box">
+                                <p class="program-title">Introduction to Python</p>
+                                <p class="program-date">April (Date TBD)</p>
+                            </a>
                         </div>
                         <div class="col-md-3 upcoming-box">
-                            <p class="program-title">Introduction to Web Development</p>
-                            <p class="program-date">June 1</p>
+                            <a href="pages/upcomingPrograms.html#program1" role="button" class="btn" id="upcoming-box">
+                                <p class="program-title">Introduction to Web Development</p>
+                                <p class="program-date">May 6 - June 24</p>
+                            </a>
                         </div>
-                        <div class="col-md-3 upcoming-box">
-                            <p class="program-title">Introduction to Python</p>
-                            <p class="program-date">July 12 - July 22</p>
-                        </div>
+                        <!-- Place holder -->
+                        <!-- <div class="col-md-3 upcoming-box">
+                            <p class="program-title">PROGRAM TITLE</p>
+                            <p class="program-date">PROGRAM DATES</p>
+                        </div> -->
                     </div>
-                    <div class="row">
-                        <!-- <div class="col-md-1"></div> -->
+                    <!-- Place holder -->
+                    <!-- <div class="row">
                         <div class="col-md-3 upcoming-box">
-                            <p class="program-title">Introduction to Web Development</p>
-                            <p class="program-date">August 10</p>
+                            <p class="program-title">PROGRAM TITLE</p>
+                            <p class="program-date">PROGRAM DATES</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
