--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -68,6 +68,43 @@
             <div class="col-md-1"></div>
             <div class="col-md-5">
                 <div class="program-box">
+                    <p class="program-title">Robocode Programming</p>
+                    <p class="program-subheading">Summer 2022 Program</p>
+                    <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
+                    <p class="program-description">
+                        In this 3-day program, students learned to program in Java using the robocode library. At the end of the program, 
+                        they each programmed a virtual robot and battled them against eachother in a tournament-stlye competition.
+                    </p>
+                    <img src="../images/summer2021.png" class="pic">
+                    <a href="https://youtu.be/yjLoRWqiAEs" target="_blank" class="link">
+                        <button class="ceremony-btn">
+                            View Final Ceremony
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="program-box">
+                    <p class="program-title">Intro to Web Development</p>
+                    <p class="program-subheading">Summer 2022 Program</p>
+                    <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
+                    <p class="program-description">
+                        In this 4-day program, students learned how to code in HTML, CSS, and JavaScript. 
+                        At the end of the program, they each coded a website about their dream vacation and shared it with the rest of the group.
+                    </p>
+                    <img src="../images/fall2020.png" class="pic">
+                    <a href="https://youtu.be/LjZmXUKcI8c" target="_blank" class="link">
+                        <button class="ceremony-btn">
+                            View Final Ceremony
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <div class="program-box">
                     <p class="program-title">Intro to Web Development</p>
                     <p class="program-subheading">Summer 2021 Program</p>
                     <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
