Tania bio updated

--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
             <div class="col-md-1"></div>
             <div class="col-md-10">
                 <div class="box">
-                    <p class="box-title">What We Do</p>
+                    <p class="box-title">Who We Are</p>
                     <p class="box-paragraph">
-                        DTech works to provide young girls with invaluable technological skills and knowledge, empowering girls and thereby changing the future. We are proud to offer a wide array of technology programs for girls of all ages, ethnicities, and backgrounds.
+                        DTech is a student-run organization that works to provide young girls with invaluable technological skills and knowledge, 
+                        empowering girls and thereby changing the future. We are proud to offer a wide array of technology programs for girls of all ages, 
+                        ethnicities, and backgrounds. DTech's programs are based on our experiences as women in STEM, and we aim to provide a safe space for 
+                        girls to explore technology.
                     </p>
-                    <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">Learn More About Our Mission</a>
+                    <a href="pages/boardMembers.html" role="button" class="btn btn-dark" id="link-btn">Learn More About Our Board Members</a>
                 </div>
             </div>
         </div>
