board member bios updated

--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -86,7 +86,7 @@
                 <p class="box-title">Sarah Rubenstein</p>
                 <p class="box-subheading">Vice President</p>
                 <p class="box-paragraph">
-                    Sarah Rubenstein is a senior at Brookfield Central who is planning to major in Computer Science next year at UW Madison. She learned to love code during her four years of Girls Who Code at Marquette. For the past two years, she's been a Software Lead on her FRC robotics team. She was also an IT intern at Northwestern Mutual for around two years and will be an intern at Concurrency during the summer of 2022. Sarah enjoys teaching code to other girls so that they can create amazing projects. 
+                    Sarah Rubenstein is a student at UW Madison who is majoring in computer science. She’s been coding since middle school and has experience in a variety of languages such as Java, JavaScript, Python, and HTML/CSS. She was the software lead on her high school’s FIRST robotics team. Sarah has interned at Northwestern Mutual as a web developer, and at Concurrency where she worked with cloud computing. She is passionate about teaching others to code and excited to work with students.
                 </p>
                 <a href="https://www.linkedin.com/in/sarah-rubenstein-b042471b1/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Connect with Sarah on LinkedIn</a>
             </div>
@@ -102,7 +102,7 @@
                 <p class="box-title">Sanjana Tarigoppula</p>
                 <p class="box-subheading">Treasurer</p>
                 <p class="box-paragraph">
-                    Sanjana Tarigoppula is a junior at the University of Wisconsin-Madison. She started coding her sophomore year of high school, and is now majoring in Computer Sciences and pursuing a certificate in Business. Sanjana is involved in coding organizations such as Coding for Good, where she is working on projects oriented around full stack development, and she will be interning at GE Healthcare this summer. Sanjana is very excited to serve on the board for Divas in Technology and increase awareness on tech careers!
+                    Sanjana Tarigoppula is a student at the University of Wisconsin-Madison. She started coding her sophomore year of high school, and is now majoring in Computer Sciences and pursuing a certificate in Business. Sanjana has interned at GE Healthcare and gained experience in Technical Product Management and Software Engineering. She will be continuing her journey at GE Healthcare as a full-time DTLP after graduation. Sanjana is very excited to serve on the board for Divas in Technology and increase awareness on tech careers!
                 </p>
                 <a href="https://www.linkedin.com/in/sanjanatarigoppula/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Connect with Sanjana on LinkedIn</a>
             </div>
@@ -118,7 +118,7 @@
                 <p class="box-title">Alyshba Sharwani</p>
                 <p class="box-subheading">Secretary, Designer</p>
                 <p class="box-paragraph">
-                    Alyshba Sharwani is a senior at Brookfield Central High School whose interests include art, reading, writing, and volunteering. Her leadership experiences includes her experience as editor and business manager of the school newspaper, secretary of a diversity and inclusivity centered school club (MSA), and former team member of a Leukemia and Lymphoma Society student fundraising team. As a designer, she is influenced by her background in art. She has taken numerous art classes, including AP Art, and has won Scholastic Awards for her work. 
+                    Alyshba Sharwani is a student at the University of Wisconsin-Madison, where she is planning on completing a double major in Statistics and English and a minor in Textiles and Fashion Design. Her past extracurricular leadership experiences and organizational skills guide her role as Secretary of DTech, while her interest and experiences in art and design, including receiving several Scholastic art awards, lead her work as Brand Designer of DTech.
                 </p>
                 <a href="https://www.linkedin.com/in/alyshba-s-387976235/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Connect with Alyshba on LinkedIn</a>
             </div>
