--- a/pages/partners.html
+++ b/pages/partners.html
@@ -84,6 +84,22 @@
                 <img src="../images/journeyHouse.jpg" class="picture">
             </div>
             <div class="col-md-6 box">
+                <p class="box-title">Edgewood College</p>
+                <p class="box-paragraph">
+                    DESCRIPTION!!
+                    Journey House's mission is to empower families of Southside Milwaukee to move out of poverty by offering Adult Education, Youth Development, THRIVE Workforce Development, and Family Engagement.
+                    Their vision is that every individual and family in Clarke Square will be given the tools and resources to succeed and contribute personally, professionally, and civically to the neighborhood and our greater Milwaukee community.
+                </p>
+                <a href="http://www.journeyhouse.org/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Learn More About Journey House</a>
+            </div>
+        </div>
+        <div class="row break-pt"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-4 picture-box">
+                <img src="../images/journeyHouse.jpg" class="picture">
+            </div>
+            <div class="col-md-6 box">
                 <p class="box-title">Journey House</p>
                 <p class="box-paragraph">
                     Journey House's mission is to empower families of Southside Milwaukee to move out of poverty by offering Adult Education, Youth Development, THRIVE Workforce Development, and Family Engagement.
