--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -92,9 +92,10 @@
                     <b>What:</b> In this two day bootcamp, students will learn the basic concepts of programming in Python.
                     No experience is required. Students will earn the “Junior Think Like A Programmer Award Badge.”
                     Lunch, swag, and mini-prizes will be provided!<br>
-                    A program fee of $15 is required to attend (scholarships available if needed).<br>
+                    <!-- A program fee of $15 is required to attend (scholarships available if needed).<br> -->
+                    Registration information coming soon!!
                 </p>
-                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
+                <!-- <a href="https://forms.gle/q7dMoEnRUhaihP4v5" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a> -->
             </div>
         </div>
         <div class="row">
@@ -117,15 +118,16 @@
                 <p class="program-subheading">Spring 2023</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
-                    <b>Who:</b> Incoming 7th-9th graders, identify as a girl, no programming experience required<br>
-                    <b>When:</b> June 27-30, 4:30pm-6:30pm<br>
-                    <b>Where:</b> Milwaukee School of Engineering<br>
-                    <b>What:</b> In this 8-week virtual program, participants will learn the skills necessary to create a simple website, 
+                    <b>Who:</b> 6th-8th grade, identify as a girl, no programming experience required<br>
+                    <b>When:</b> Saturdays 4pm-6pm, May 6-June 24<br>
+                    <b>Where:</b> Online (Zoom)<br>
+                    <b>What:</b> IIn this 8-week virtual program, participants will learn the skills necessary to create a simple website, 
                     which includes the basics of HMTL, CSS, and JavaScript. Their final projects will showcase one of their hobbies or interests. 
-                    Participants will learn about coding and tech jobs in the real world through a guest speaker. Swag and mini-prizes will be provided!<br>
+                    Participants will learn about coding and tech jobs in the real world through a guest speaker. 
+                    Swag and mini-prizes will be provided!<br>
                     A program fee of $20 is required to attend (scholarships available if needed).<br>
                 </p>
-                <a href="https://forms.gle/8MA8z2kTyXwdPsZbA" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
+                <a href="https://www.eventbrite.com/e/introduction-to-web-development-tickets-534862517187" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
         <!-- Place holder -->
