past programs updated

--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -75,12 +75,7 @@
                         In this 3-day program, students learned to program in Java using the robocode library. At the end of the program, 
                         they each programmed a virtual robot and battled them against eachother in a tournament-stlye competition.
                     </p>
-                    <img src="../images/summer2021.png" class="pic">
-                    <a href="https://youtu.be/yjLoRWqiAEs" target="_blank" class="link">
-                        <button class="ceremony-btn">
-                            View Final Ceremony
-                        </button>
-                    </a>
+                    <img src="../images/summer2022-robocode.jpeg" class="pic">
                 </div>
             </div>
             <div class="col-md-5">
@@ -92,12 +87,7 @@
                         In this 4-day program, students learned how to code in HTML, CSS, and JavaScript. 
                         At the end of the program, they each coded a website about their dream vacation and shared it with the rest of the group.
                     </p>
-                    <img src="../images/fall2020.png" class="pic">
-                    <a href="https://youtu.be/LjZmXUKcI8c" target="_blank" class="link">
-                        <button class="ceremony-btn">
-                            View Final Ceremony
-                        </button>
-                    </a>
+                    <img src="../images/summer2022-webDev.jpeg" class="pic">
                 </div>
             </div>
         </div>
