--- a/pages/partners.html
+++ b/pages/partners.html
@@ -81,16 +81,17 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-4 picture-box">
-                <img src="../images/journeyHouse.jpg" class="picture">
+                <img src="../images/edgewood.jpeg" class="picture">
             </div>
             <div class="col-md-6 box">
                 <p class="box-title">Edgewood College</p>
                 <p class="box-paragraph">
-                    DESCRIPTION!!
-                    Journey House's mission is to empower families of Southside Milwaukee to move out of poverty by offering Adult Education, Youth Development, THRIVE Workforce Development, and Family Engagement.
-                    Their vision is that every individual and family in Clarke Square will be given the tools and resources to succeed and contribute personally, professionally, and civically to the neighborhood and our greater Milwaukee community.
+                    Edgewood's Office of Science Outreach (OSO) aims to support STEM education within and beyond the Edgewood community. 
+                    They conduct science outreach activities for their community's youth, teachers, and general public. 
+                    OSO encourages Edgewood's staff, faculty, and students to be involved in these outreach activities, and 
+                    they empower other campus groups to become involved in spreading science education to the community.
                 </p>
-                <a href="http://www.journeyhouse.org/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Learn More About Journey House</a>
+                <a href="https://www.edgewood.edu/outreach/science" target="_blank" role="button" class="btn btn-dark" id="link-btn">Learn More About Edgewood</a>
             </div>
         </div>
         <div class="row break-pt"></div>
