updated python program info

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="col-md-3">
                             <a href="pages/upcomingPrograms.html#program1" role="button" class="btn" id="upcoming-box">
                                 <p class="program-title">Introduction to Python</p>
-                                <p class="program-date">April (Date TBD)</p>
+                                <p class="program-date">April 15-16</p>
                             </a>
                         </div>
                         <div class="col-md-3 upcoming-box">
