--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -71,7 +71,7 @@
             <div class="col-md-8 program-dropdown" id="program1">
                 <div class="row">
                     <div class="col-md-11">
-                        <p class="dropdown-title">Intro to Coding, Python</p>
+                        <p class="dropdown-title">Introduction to Python</p>
                     </div>
                     <div class="col-md-1">
                         <img src="../images/downArrowWhite.png" id="arrow1">
@@ -82,20 +82,20 @@
         <div class="row" id="program1-info">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-box">
-                <p class="program-title">Intro to Coding, Python</p>
+                <p class="program-title">Introduction to Python</p>
                 <p class="program-subheading">Spring 2023</p>
-                <p class="program-subheading">Led by DTech, In partnership with Edgewood College</p>
+                <p class="program-subheading">Led by DTech, In partnership with Edgewood College and Badgerland Girl Scouts</p>
                 <p class="program-description">
-                    <b>Who:</b> Badgerland Girl Scout Juniors, no programming experience required<br>
-                    <b>When:</b> Saturday-Sunday, 9am-4pm, April (Date TBD)<br>
+                    <b>Who:</b> Girl Scout Juniors, no programming experience required<br>
+                    <b>When:</b> April 15-16 (Saturday and Sunday), 9am-4pm<br>
                     <b>Where:</b> Edgewood College, Madison<br>
-                    <b>What:</b> In this two day bootcamp, students will learn the basic concepts of programming in Python.
-                    No experience is required. Students will earn the “Junior Think Like A Programmer Award Badge.”
+                    <b>What:</b> In this two day event, students will learn the basic concepts of programming in Python.
+                    No experience is required. Students will earn the “Coding for Good 1: Coding Basics” badge.
                     Lunch, swag, and mini-prizes will be provided!<br>
-                    <!-- A program fee of $15 is required to attend (scholarships available if needed).<br> -->
-                    Registration information coming soon!!
+                    A program fee of $15 is required to attend (scholarships available if needed).<br>
+                    There are limited spots, so register soon!!
                 </p>
-                <!-- <a href="https://forms.gle/q7dMoEnRUhaihP4v5" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a> -->
+                <a href="https://www.eventbrite.com/e/introduction-to-python-tickets-576226437787" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
         <div class="row">
@@ -103,7 +103,7 @@
             <div class="col-md-8 program-dropdown" id="program2">
                 <div class="row">
                     <div class="col-md-11">
-                        <p class="dropdown-title">Intro to Web Development</p>
+                        <p class="dropdown-title">Introduction to Web Development</p>
                     </div>
                     <div class="col-md-1">
                         <img src="../images/downArrowWhite.png" id="arrow2">
@@ -126,6 +126,7 @@
                     Participants will learn about coding and tech jobs in the real world through a guest speaker. 
                     Swag and mini-prizes will be provided!<br>
                     A program fee of $20 is required to attend (scholarships available if needed).<br>
+                    There are limited spots, so register soon!!
                 </p>
                 <a href="https://www.eventbrite.com/e/introduction-to-web-development-tickets-534862517187" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
