upcoming programs updated

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -71,7 +71,7 @@
             <div class="col-md-8 program-dropdown" id="program1">
                 <div class="row">
                     <div class="col-md-11">
-                        <p class="dropdown-title">Introduction to Python</p>
+                        <p class="dropdown-title">Introduction to Python - MSOE</p>
                     </div>
                     <div class="col-md-1">
                         <img src="../images/downArrowWhite.png" id="arrow1">
@@ -84,18 +84,18 @@
             <div class="col-md-8 program-box">
                 <p class="program-title">Introduction to Python</p>
                 <p class="program-subheading">Spring 2023</p>
-                <p class="program-subheading">Led by DTech, In partnership with Edgewood College and Badgerland Girl Scouts</p>
+                <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
-                    <b>Who:</b> Girl Scout Juniors, no programming experience required<br>
-                    <b>When:</b> April 15-16 (Saturday and Sunday), 9am-4pm<br>
-                    <b>Where:</b> Edgewood College, Madison<br>
-                    <b>What:</b> In this two day event, students will learn the basic concepts of programming in Python.
-                    No experience is required. Students will earn the “Coding for Good 1: Coding Basics” badge.
-                    Lunch, swag, and mini-prizes will be provided!<br>
+                    <b>Who:</b> Middle Schoolers (6th-8th graders)<br>
+                    <b>When:</b> January 13 and 20 (Saturdays), 1-5pm<br>
+                    <b>Where:</b> MSOE STEM Center<br>
+                    <b>What:</b> In this two day event, students will learn the basic concepts of programming in Python
+                    and develop Python projects. No experience is required.
+                    Snacks, swag, and mini-prizes will be provided!<br>
                     A program fee of $15 is required to attend (scholarships available if needed).<br>
                     There are limited spots, so register soon!!
                 </p>
-                <a href="https://www.eventbrite.com/e/introduction-to-python-tickets-576226437787" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
+                <a href="https://www.eventbrite.com/e/intro-to-python-tickets-760837474367" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
         <div class="row">
@@ -103,7 +103,7 @@
             <div class="col-md-8 program-dropdown" id="program2">
                 <div class="row">
                     <div class="col-md-11">
-                        <p class="dropdown-title">Introduction to Web Development</p>
+                        <p class="dropdown-title">Introduction to Python - Girl Scouts</p>
                     </div>
                     <div class="col-md-1">
                         <img src="../images/downArrowWhite.png" id="arrow2">
@@ -116,19 +116,18 @@
             <div class="col-md-8 program-box">
                 <p class="program-title">Intro to Web Development</p>
                 <p class="program-subheading">Spring 2023</p>
-                <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
+                <p class="program-subheading">Led by DTech, In partnership with Badgerland Girl Scouts and MATC</p>
                 <p class="program-description">
-                    <b>Who:</b> 6th-8th grade, identify as a girl, no programming experience required<br>
-                    <b>When:</b> Saturdays 4pm-6pm, May 6-June 24<br>
-                    <b>Where:</b> Online (Zoom)<br>
-                    <b>What:</b> IIn this 8-week virtual program, participants will learn the skills necessary to create a simple website, 
-                    which includes the basics of HMTL, CSS, and JavaScript. Their final projects will showcase one of their hobbies or interests. 
-                    Participants will learn about coding and tech jobs in the real world through a guest speaker. 
-                    Swag and mini-prizes will be provided!<br>
-                    A program fee of $20 is required to attend (scholarships available if needed).<br>
+                    <b>Who:</b> Junior Badgerland Girl Scouts<br>
+                    <b>When:</b> DATE TBD (Saturday and Sunday, 9am-4pm both days)<br>
+                    <b>Where:</b> Madison Area Technical College STEM Center<br>
+                    <b>What:</b> In this two day event, students will learn the basic concepts of programming in Python.
+                    No experience is required. Participants will achieve the Coding for Good 1: Coding Basics badge.
+                    Lunch and mini-prizes will be provided!<br>
+                    A program fee of $15 is required to attend (scholarships available if needed).<br>
                     There are limited spots, so register soon!!
                 </p>
-                <a href="https://www.eventbrite.com/e/introduction-to-web-development-tickets-534862517187" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
+                <a href="https://www.eventbrite.com/e/introduction-to-python-gs-juniors-tickets-764844198587?aff=oddtdtcreator" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
         <!-- Place holder -->
