updated program info

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -114,12 +114,12 @@
         <div class="row" id="program2-info">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-box">
-                <p class="program-title">Intro to Web Development</p>
+                <p class="program-title">Introduction to Python</p>
                 <p class="program-subheading">Spring 2023</p>
                 <p class="program-subheading">Led by DTech, In partnership with Badgerland Girl Scouts and MATC</p>
                 <p class="program-description">
                     <b>Who:</b> Junior Badgerland Girl Scouts<br>
-                    <b>When:</b> DATE TBD (Saturday and Sunday, 9am-4pm both days)<br>
+                    <b>When:</b> April 20-21 (Saturday and Sunday, 9am-4pm both days)<br>
                     <b>Where:</b> Madison Area Technical College STEM Center<br>
                     <b>What:</b> In this two day event, students will learn the basic concepts of programming in Python.
                     No experience is required. Participants will achieve the Coding for Good 1: Coding Basics badge.
