fixed registration link

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -95,7 +95,7 @@
                     A program fee of $15 is required to attend (scholarships available if needed).<br>
                     There are limited spots, so register soon!!
                 </p>
-                <a href="https://www.eventbrite.com/e/intro-to-python-tickets-760837474367" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
+                <a href="https://www.eventbrite.com/e/intro-to-python-tickets-760836952807?aff=oddtdtcreator" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
         <div class="row">
